syntax = "proto3";
package messages;

import "key_word.proto";

message TermQuery {
  KeyWord Keyword = 1; // Keyword类型引用自doc.proto
  repeated TermQuery Must = 2;
  repeated TermQuery Should = 3;
}